--- a/style.css
+++ b/style.css
@@ -24,15 +24,15 @@ canvas {
 }
 
 #line-numbers-container {
-  height: calc(100% - 2px);
+  height: calc(100% - 1px);
   width: 65px;
   color: #999;
   border: solid 1px #333;
   border-top: none;
   border-collapse: collapse;
   background-color: #151515;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
   overflow: hidden;
+  z-index: 1;
 }
 
 #line-numbers {
@@ -86,6 +86,7 @@ canvas {
   color: white;
   user-select: none;
   overflow: scroll;
+  box-shadow: inset 0px 0px 10px #000a;
 }
 
 #syntax::-webkit-scrollbar,
@@ -118,6 +119,7 @@ button {
   color: white;
   background: #090909;
   cursor: pointer;
+  text-shadow: 0px 0px 10px #fff6;
 }
 
 button:hover {
