--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ button {
   color: white;
   background: #090909;
   cursor: pointer;
-  text-shadow: 0px 0px 10px #fff6;
+  /* text-shadow: 0px 0px 10px #fff6; */
 }
 
 button:hover {
